Debug Assert in wm_messagebus: Occurs when manipulating collection visibility and (un)linking from a python script #60267

Closed
opened 2019-01-07 12:22:13 +01:00 by Jesse Yurkovich · 5 comments

System Information
Operating system: Win10
Graphics card: nVidia Quadro 600

Blender Version
Broken: 2.80 (sub 40), branch: master, commit date: 2019-01-07 04:34, hash: 6015a03255
Worked: Most likely a build in the Dec. time frame

Short description of error
The following assert is triggered when attempting to set the visibility of a collection and then deleting it:

BLI_assert failed: c:\users\_removed_\source\repos\blender-git\blender\source\blender\windowmanager\message_bus\intern\wm_message_bus.c:147, WM_msgbus_handle(), at 'mbus->messages_tag_count == 0'

Exact steps for others to reproduce the error
msgbus-assert-2.blend

  • Load attached .blend file
  • Run the script that is currently loaded in the text editor
  • Execute bpy.ops.test.trigger_assert() to run that code and trigger the assert

Removing the following line from the script will prevent the assert from triggering: col_bool.hide_viewport = False

This is a reduced repro -- disregard the fact I'm attempting to remove a collection that still has objects inside etc. as the assert happens even if I delete the object.

**System Information** Operating system: Win10 Graphics card: nVidia Quadro 600 **Blender Version** Broken: 2.80 (sub 40), branch: master, commit date: 2019-01-07 04:34, hash: 6015a03255af Worked: Most likely a build in the Dec. time frame **Short description of error** The following assert is triggered when attempting to set the visibility of a collection and then deleting it: ```BLI_assert failed: c:\users\_removed_\source\repos\blender-git\blender\source\blender\windowmanager\message_bus\intern\wm_message_bus.c:147, WM_msgbus_handle(), at 'mbus->messages_tag_count == 0'``` **Exact steps for others to reproduce the error** [msgbus-assert-2.blend](https://archive.blender.org/developer/F6209012/msgbus-assert-2.blend) - Load attached .blend file - Run the script that is currently loaded in the text editor - Execute `bpy.ops.test.trigger_assert()` to run that code and trigger the assert Removing the following line from the script will prevent the assert from triggering: `col_bool.hide_viewport = False` This is a reduced repro -- disregard the fact I'm attempting to remove a collection that still has objects inside etc. as the assert happens even if I delete the object.
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin

Added subscribers: @ideasman42, @dfelinto

Added subscribers: @ideasman42, @dfelinto
Dalai Felinto self-assigned this 2019-01-07 14:54:43 +01:00

For the records, the Python script is:

parent_col = context.scene.collection
col_bool = bpy.data.collections["DC_boolean_Cube"]
col_bool.hide_viewport = False
parent_col.children.unlink(col_bool)
bpy.data.collections.remove(col_bool)

There is a chance the issue is related to #57857 and how we remove hidden collections from the depsgraph.
That said @ideasman42 may want to investigate this a bit since it is message bus related.

(Note I didn't try to confirm the bug, but I try tomorrow with a debug build).

For the records, the Python script is: ``` parent_col = context.scene.collection col_bool = bpy.data.collections["DC_boolean_Cube"] col_bool.hide_viewport = False parent_col.children.unlink(col_bool) bpy.data.collections.remove(col_bool) ``` There is a chance the issue is related to #57857 and how we remove hidden collections from the depsgraph. That said @ideasman42 may want to investigate this a bit since it is message bus related. (Note I didn't try to confirm the bug, but I try tomorrow with a debug build).

This issue was referenced by 723e469686

This issue was referenced by 723e4696860a05018e532b0695177d68a1b5f75e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60267
No description provided.