Fix T60267: Assert manipulating a collection