source/blender/windowmanager/message_bus/intern/wm_message_bus.c
@@ -245,6 +245,10 @@ void WM_msg_id_remove(struct wmMsgBus *mbus, const struct ID *id)
  * \note While we could have a separate type for ID's, use RNA since there is enough overlap.
  * \{ */
 
+
+/**
+ * \note #wmMsgBus.messages_tag_count isn't updated, caller must handle.
+ */
 void wm_msg_subscribe_value_free(
         wmMsgSubscribeKey *msg_key, wmMsgSubscribeValueLink *msg_lnk)
 {
